# WebUtils

./: README.md  setup.cfg
WebUtils/: InstagramScraper.py  PinterestAPI.py  StoppableSleep.py  ThreadedTwitter.py  TwitterScraper.py  threaded_twitter.py  tmp.py  utils.py
examples/: collect_secondgrade_twitter_followers.py  simple_request.py
tests/: InstagramScraper_tests.py  PinterestAPI_tests.py  StoppableSleep_test.py  ThreadedTwitter_tests.py  TwitterScraper_tests.py  threaded_twitter_tests.py  utils_tests.py
