[metadata]
name = local_WebUtils
version = 1.0.1
long_description = file: README.md
license = MIT

[options]
packages =
	WebUtils
install_requires =
	httpx[http2]
	beautifulsoup4
	curlparser
	tweepy
	JSONWrap @ git+https://github.com/AlessandroVisintin/JSONWrap.git

[options.packages.find]
#exclude =
#	tests*
